vc1-gateway-frontdoor.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: vc-gateway-frontdoor
  namespace: vc1
spec:
  description: "Front door: allow external traffic to virtual-cluster gateway proxy pods on 80/443."
  endpointSelector:
    matchExpressions:
      - key: gateway.networking.k8s.io/gateway-name
        operator: Exists
  ingress:
    - fromEntities:
        - world
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "443"
              protocol: TCP
